--- a/lib/config.json
+++ b/lib/config.json
@@ -585,8 +585,8 @@
                             ["rForeArm", "world"] 
 
                         ],
-                "fbxMethod": "predictElbowPosRot",
-                "viveMethod": "predictElbowPosRotVive",
+                "fbxMethod": "predictNPosRot",
+                "viveMethod": "predictNPosRot",
                 "logDir":"/home/daveotte/work/trials",
                 "epochs": 80
             },  
@@ -615,7 +615,7 @@
 
                         ],
                 "fbxMethod": "predictElbowPosRot",
-                "viveMethod": "predictElbowPosRot",
+                "viveMethod": "predictElbowPosRotVive",
                 "logDir":"/home/daveotte/work/trials",
                 "epochs": 80
             },              {
@@ -680,23 +680,44 @@
                             ["rThigh", "world"],    
                             ["rShin", "world"],    
                             ["rFoot", "world"],    
-                            ["rForeArm", "world"],
+                            ["lForeArm", "world"],
                             ["lCollar", "world"],    
                             ["lShldr", "world"],    
                             ["lForeArm", "world"],       
                             ["lButtock", "world"],    
                             ["lThigh", "world"],    
                             ["lShin", "world"],    
-                            ["lFoot", "world"],    
-                            ["lForeArm", "world"]
+                            ["lFoot", "world"]
+
                         ],
-                "fbxMethod": "predictEverything",
-                "viveMethod": "predictEverythingVive",
+                "fbxMethod": "predictNPosRot",
+                "viveMethod": "predictNPosRot",
                 "logDir":"/home/daveotte/work/trials",
-                "epochs": 1
+                "epochs": 80
+            },
+            {
+                "name": "predictBasic",
+                "transforms":
+                        [   
+                            ["head", "world"],
+                            ["rHand", "world"],    
+                            ["lHand", "world"],    
+                            ["hip", "world"],       
+                            ["neck", "world"],       
+                            ["rShldr", "world"],    
+                            ["rForeArm", "world"],     
+                            ["lShldr", "world"],    
+                            ["lForeArm", "world"]    
+
+                        ],
+                "fbxMethod": "predictNPosRot",
+                "viveMethod": "predictNPosRot",
+                "logDir":"/home/daveotte/work/trials",
+                "epochs": 80
             }
        ],
-    "trainingGroupIndices": [2],
+    "trainingGroupIndices": [2, 3, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 45, 46, 47, 49, 54, 55, 56, 60, 61, 62, 63, 64, 69, 70, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 93, 94, 102, 103, 104, 105, 106, 107, 108, 111, 113, 114, 115, 117, 118, 120, 121, 122, 123, 124, 125, 126, 127, 128, 131, 132, 133, 134, 135, 136, 137, 138, 139, 140, 141, 142, 143, 144],
     "testingGroupIndices": [23,24,1,200],
-    "nnConfigs": ["predictElbowPosRot"]
+    "experimentGroupIndices": [23],
+    "nnConfigs": ["predictBasic"]
 }
