--- a/lib/config.json
+++ b/lib/config.json
@@ -721,10 +721,37 @@
                 "logDir":"/home/daveotte/work/test",
                 "epochs": 60,
                 "mirror": 0
+            },
+            {
+                "name": "predictBasicPosOnly",
+                "transforms":
+                        [   
+                            ["head", "world"],
+                            ["rHand", "world"],    
+                            ["lHand", "world"],    
+                            ["hip", "world"],  
+                            ["abdomen", "world"],         
+                            ["neck", "world"],       
+                            ["rShldr", "world"],    
+                            ["rForeArm", "world"],     
+                            ["lShldr", "world"],    
+                            ["lForeArm", "world"],    
+                            ["rFoot", "world"],    
+                            ["lFoot", "world"],    
+                            ["rShin", "world"],    
+                            ["lShin", "world"],    
+                            ["rThigh", "world"],    
+                            ["lThigh", "world"] 
+                        ],
+                "fbxMethod": "predictNPos",
+                "nn": "NN",
+                "logDir":"/home/daveotte/work/test",
+                "epochs": 60,
+                "mirror": 0
             }
        ],
     "trainingGroupIndices": [2, 6, 7, 8, 9, 10, 11, 12, 15, 16, 17, 18, 19, 20, 21, 22, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 37, 38, 39, 41, 42, 43, 45, 46, 47, 54, 55, 56, 60, 62, 63, 64, 69, 70, 73, 76, 77, 78, 79, 80, 82, 86, 87, 93, 94, 102, 103, 104, 105, 107, 111, 113, 114, 115, 118, 120, 122, 124, 127, 128, 132, 133, 135, 136, 137, 138, 139, 141, 142, 143, 144],
     "testingGroupIndices": [23,24,1,200],
     "experimentGroupIndices": [23],
-    "nnConfigs": ["predictBasic"]
+    "nnConfigs": ["predictBasicPosOnly"]
 }
